--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script type="text/javascript" src="enchant.js"></script>
     <script type="text/javascript" src="../libs/gl-matrix-min.js"></script>
-    <!--    <script type="text/javascript" src="../libs/gl.enchant.js"></script>
-    <script type="text/javascript" src="widget.enchant.js"></script>-->
+    <!--    <script type="text/javascript" src="../libs/gl.enchant.js"></script>-->
+    <script type="text/javascript" src="slide.enchant.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <style type="text/css">
         body {
