stab: jqplot chart func.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script type="text/javascript" src="../libs/gl-matrix-min.js"></script>
     <!--    <script type="text/javascript" src="../libs/gl.enchant.js"></script>-->
     <script type="text/javascript" src="slide.enchant.js"></script>
+    <script type="text/javascript" src="./plugin/jquery.js"></script>
+    <script type="text/javascript" src="./plugin/jquery.jqplot.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <style type="text/css" src="./plugin/jquery.jqplot.css"></style>
     <style type="text/css">
         body {
             margin: 0;
@@ -18,7 +21,7 @@
 </head>
 <body>
 <center>
-<!--<div id='enchant-stage' style='width:1000px;height:720px;'>-->
+    <!--<div id='chart'>-->
 </div>
 </center>
 </body>
