--- a/example/index.html
+++ b/example/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no"> 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script type="text/javascript" src="enchant.js"></script>
-    <script type="text/javascript" src="../libs/gl-matrix-min.js"></script>
-    <!--    <script type="text/javascript" src="../libs/gl.enchant.js"></script>-->
-    <script type="text/javascript" src="slide.enchant.js"></script>
-    <script type="text/javascript" src="./plugin/jquery.js"></script>
-    <script type="text/javascript" src="./plugin/jquery.jqplot.js"></script>
+    <script type="text/javascript" src="../slide.enchant.js"></script>
+    <script type="text/javascript" src="../extension.slide.enchant.js"></script>
+    <script type="text/javascript" src="../plugin/jquery.js"></script>
+    <script type="text/javascript" src="../plugin/jquery.jqplot.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <style type="text/css" src="./plugin/jquery.jqplot.css"></style>
     <style type="text/css">
