--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no"> 
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <script type="text/javascript" src="enchant.js"></script>
+    <script type="text/javascript" src="../plugin/enchant.js"></script>
     <script type="text/javascript" src="../slide.enchant.js"></script>
     <script type="text/javascript" src="../extension.slide.enchant.js"></script>
     <script type="text/javascript" src="../plugin/jquery.js"></script>
